fixed card overflow

--- a/index.scss
+++ b/index.scss
@@ -228,8 +228,8 @@ input[type="search"] {
 
 .project-cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-auto-rows: 250px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: 300px;
   grid-area: projects;
   gap: 2rem;
 }
